# jj-mcc-ds

./: .gitignore  config.py  process.py  publish.py  pyproject.toml
.github/workflows/: publish_to_hf.yml
