[project]
name = "jj-mcc-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.34.5",
    "pandas>=2.3.2",
]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"
